force-app/main/default/objects/Shipment_Tracking__c/Shipment_Tracking__c.object-meta.xml
<CustomObject>
    <label>Tracking</label>
    <nameField>
        <displayFormat>STN-{000000}</displayFormat>
        <label>Shipment Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>