force-app/main/default/objects/Shipment_Tracking__c/fields/Act_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Act_Delivery_Date__c</fullName>
    <label>Act. Delivery Date</label>
    <type>DateTime</type>
</CustomField>