force-app/main/default/objects/Shipment_Tracking__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Transport__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Airport</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transport__c</referenceTo>
    <relationshipName>Shipment_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>