force-app/main/default/objects/Shipment_Tracking__c/fields/Arrival_Scan__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Scan__c</fullName>
    <label>Arrival Scan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>