force-app/main/default/objects/Shipment_Tracking__c/fields/BagSealNo__c.field-meta.xml
<CustomField>
    <fullName>BagSealNo__c</fullName>
    <label>Bag/SealNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>