force-app/main/default/objects/Shipment_Tracking__c/fields/BVC_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>BVC_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVC Vehicle</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Tracking (BVC Vehicle)</relationshipLabel>
    <relationshipName>Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>