force-app/main/default/objects/Shipment_Tracking__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>CASE(TEXT(Location__c),
					&quot;Out for Pickup&quot;, Shipment__r.Origin_Address_City__c,
					&quot;Picked Up&quot;, Shipment__r.Origin_Address_City__c,
					&quot;Origin Hub&quot;, Hub__r.Hub_City__c,
					&quot;Transit Hub&quot;, Hub__r.Hub_City__c,
					&quot;Destination Hub&quot;, Hub__r.Hub_City__c,
					&quot;Out for Delivery&quot;, Shipment__r.Destination_Address_City__c,
					&quot;Delivered&quot;, Shipment__r.Destination_Address_City__c,
					&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>