force-app/main/default/objects/Shipment_Tracking__c/fields/Delivered_To__c.field-meta.xml
<CustomField>
    <fullName>Delivered_To__c</fullName>
    <label>Delivered To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>