force-app/main/default/objects/Shipment_Tracking__c/fields/Est_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Delivery_Date__c</fullName>
    <label>Est. Delivery Date</label>
    <type>Date</type>
</CustomField>