force-app/main/default/objects/Shipment_Tracking__c/fields/Est_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Pickup_Date__c</fullName>
    <label>Est. Pickup Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>