force-app/main/default/objects/Shipment_Tracking__c/fields/Flight_Arrived_At__c.field-meta.xml
<CustomField>
    <fullName>Flight_Arrived_At__c</fullName>
    <label>Flight Arrived At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>