force-app/main/default/objects/Shipment_Tracking__c/fields/Flight_Departed_From__c.field-meta.xml
<CustomField>
    <fullName>Flight_Departed_From__c</fullName>
    <label>Flight Departed From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>