force-app/main/default/objects/Shipment_Tracking__c/fields/Geocode__c.field-meta.xml
<CustomField>
    <fullName>Geocode__c</fullName>
    <label>Geocode</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>