force-app/main/default/objects/Shipment_Tracking__c/fields/HAWBNO__c.field-meta.xml
<CustomField>
    <fullName>HAWBNO__c</fullName>
    <label>HAWBNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>