force-app/main/default/objects/Shipment_Tracking__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipName>Shipment_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>