force-app/main/default/objects/Shipment_Tracking__c/fields/Is_offline_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Is_offline_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is offline Delivery</label>
    <type>Checkbox</type>
</CustomField>