force-app/main/default/objects/Shipment_Tracking__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Out for Pickup</fullName>
            </value>
            <value>
                <fullName>Picked Up</fullName>
            </value>
            <value>
                <fullName>Origin Hub</fullName>
            </value>
            <value>
                <fullName>Origin Port</fullName>
            </value>
            <value>
                <fullName>Transit Hub</fullName>
            </value>
            <value>
                <fullName>Transit Port</fullName>
            </value>
            <value>
                <fullName>Destination Port</fullName>
            </value>
            <value>
                <fullName>Destination Hub</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Out of Linehaul</fullName>
            </value>
            <value>
                <fullName>Linehaul Deposit</fullName>
            </value>
            <value>
                <fullName>Linehaul In-Transit</fullName>
            </value>
            <value>
                <fullName>Linehaul Retrieved</fullName>
            </value>
            <value>
                <fullName>Airline Deposited</fullName>
            </value>
            <value>
                <fullName>AWB Booked</fullName>
            </value>
            <value>
                <fullName>AWB Finalized</fullName>
            </value>
            <value>
                <fullName>Flight Arrived</fullName>
            </value>
            <value>
                <fullName>Flight Departed</fullName>
            </value>
            <value>
                <fullName>On-Route Airport</fullName>
            </value>
            <value>
                <fullName>Pre-Flight at Airport</fullName>
            </value>
            <value>
                <fullName>Pre-Retrieval at Airport</fullName>
            </value>
            <value>
                <fullName>Retrieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>