force-app/main/default/objects/Shipment_Tracking__c/fields/MAWBNO__c.field-meta.xml
<CustomField>
    <fullName>MAWBNO__c</fullName>
    <label>MAWBNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>