force-app/main/default/objects/Shipment_Tracking__c/fields/Orgin__c.field-meta.xml
<CustomField>
    <fullName>Orgin__c</fullName>
    <label>Orgin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>