force-app/main/default/objects/Shipment_Tracking__c/fields/Scan_Time__c.field-meta.xml
<CustomField>
    <fullName>Scan_Time__c</fullName>
    <label>Scan Time</label>
    <type>DateTime</type>
</CustomField>