force-app/main/default/objects/Shipment_Tracking__c/fields/Scanned_City__c.field-meta.xml
<CustomField>
    <fullName>Scanned_City__c</fullName>
    <label>Scanned City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>