force-app/main/default/objects/Shipment_Tracking__c/fields/Shipment_Created__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Created__c</fullName>
    <label>Shipment Created</label>
    <type>Date</type>
</CustomField>