force-app/main/default/objects/Shipment_Tracking__c/fields/Shipping_Note_No__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Note_No__c</fullName>
    <label>Shipping Note No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>