force-app/main/default/objects/Shipment_Tracking__c/fields/StatusTime__c.field-meta.xml
<CustomField>
    <fullName>StatusTime__c</fullName>
    <label>StatusTime</label>
    <type>DateTime</type>
</CustomField>