force-app/main/default/objects/Shipment_Tracking__c/fields/Tracking_Through__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Through__c</fullName>
    <label>Tracking Through</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Through Mobile</fullName>
            </value>
            <value>
                <fullName>Through Operation Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>