force-app/main/default/objects/Shipment_Tracking__c/fields/Vaults__c.field-meta.xml
<CustomField>
    <fullName>Vaults__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vault</label>
    <referenceTo>BVC_Vault_Master__c</referenceTo>
    <relationshipLabel>Tracking</relationshipLabel>
    <relationshipName>Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>