force-app/main/default/objects/Shipment_Tracking__c/validationRules/Tracking_is_delivered.validationRule-meta.xml
<ValidationRule>
    <fullName>Tracking_is_delivered</fullName>
    <active>true</active>
    <description>Tracking Status is delivered</description>
    <errorConditionFormula>AND(
  ISCHANGED(Location__c),
  ISPICKVAL(PRIORVALUE(Location__c), &quot;Delivered&quot;)
)</errorConditionFormula>
    <errorMessage>Tracking cannot be changed once delivered</errorMessage>
</ValidationRule>